# sentinel-risk-intelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
src/app/: streamlit_app.py
src/sentinel/ai/: llm_client.py  market_context.py  news_loader.py  risk_adjustment.py  risk_brief.py
src/sentinel/data/: loader.py
src/sentinel/portfolio/: optimization.py  portfolio.py  returns.py  upload.py
src/sentinel/reporting/: report_generator.py
src/sentinel/risk/: correlation.py  diversification.py  metrics.py  portfolio_risk.py  risk_contribution.py  scoring.py  stress.py  var.py
src/sentinel/utils/: logger.py
tests/: test_ai_market_context.py  test_cvar_and_scoring.py  test_news_loader.py  test_optimization.py  test_portfolio.py  test_risk_contribution.py  test_upload.py  test_var.py
